[aliases]
test=pytest

[bdist_wheel]
universal=1

[flake8]
max-line-length = 99
exclude =
    .git,
    __pycache__,
count = True
ignore = D105

[pydocstyle]
convention = numpy
add-ignore = D105

[metadata]
description-file = README.md

[tool:pytest]
addopts = --cov=tidy_headers --verbose --cov-report term:skip-covered
python_files = tests.py
